tests/paczka1/fuzzy1/12686311.err
Error in line 1: S715 A891 55,9
Error in line 9: hCTfb0CC S715 11,3
Error in line 15: Y5op S98 75,8
Error in line 18: XI3N1AJzg S715 ,5
Error in line 16: S715 S98 77,4
Error in line 20: XI3N1AJzg S715 222,1
Error in line 24: xqQ9lxQ S98 11,1
Error in line 22: fdn7JoGNxe S98 202,5
Error in line 30: XI3N1AJzg S98 45,9
Error in line 35: R21TxejSK A891 27,9
